--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/Jefinho_Products.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Jo\u00e3o Salom\u00e3o\\Desktop\\mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Jo\u00e3o Salom\u00e3o\\Downloads\\mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
