--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Jo\u00e3o Salom\u00e3o
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=jefinho.products.Main
+main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
